src/lib_time_measurement/ppx/test/valid/test_funapp_input.ml
let f x y z = x + y + z

let _ = f 1 2 3 [@time.duration fun_app]
