src/lib_time_measurement/ppx/test/invalid/test_invalid_payload_input.ml
let _ = (1 + 3) [@time.duration 1 + 3]
